--- a/CSharp/GeekBrains/OOPv2/Figures/Figures.Core/Figures.Core.csproj
+++ b/CSharp/GeekBrains/OOPv2/Figures/Figures.Core/Figures.Core.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <InternalsVisibleTo Include="Figures.UIConsole"/>
+  </ItemGroup>
+
 </Project>
