--- a/CSharp/GeekBrains/Algorithms/BenchmarkTests/BenchmarkTests.csproj
+++ b/CSharp/GeekBrains/Algorithms/BenchmarkTests/BenchmarkTests.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -9,6 +9,10 @@
 
   <ItemGroup>
     <PackageReference Include="BenchmarkDotNet" Version="0.13.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Points\" />
   </ItemGroup>
 
 </Project>
