--- a/CSharp/GeekBrains/Algorithms/CustomCollections.TraverseAlgorithms/CustomCollections.TraverseAlgorithms.csproj
+++ b/CSharp/GeekBrains/Algorithms/CustomCollections.TraverseAlgorithms/CustomCollections.TraverseAlgorithms.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <Folder Include="BinaryTreeTraverse\" />
+    <Folder Include="GraphTraverse\" />
   </ItemGroup>
 
   <ItemGroup>
