add calculator programs benchmark test

--- a/CSharp/GeekBrains/Algorithms/BenchmarkTests/BenchmarkTests.csproj
+++ b/CSharp/GeekBrains/Algorithms/BenchmarkTests/BenchmarkTests.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="DynamicPrograms\" />
     <Folder Include="SearchValueInCollection\" />
     <Folder Include="Points\" />
   </ItemGroup>
